--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Trial</title>
+    <title>G & H Hotels</title>
   </head>
   <body>
     <header>
