--- a/index.html
+++ b/index.html
@@ -385,92 +385,8 @@
           <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
         </div>
         <!-- Copyright -->
-      </footer>
-      <!-- Footer -->
-
-      <!-- <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <h6>About</h6>
-            <p class="text-justify">
-              Sophistication and beauty – this is what marks out Hotel Laguna’s
-              74 rooms with terraces over the Chia panorama and its lagoon
-              populated with pink flamingos, rolling sand dunes, ultra-fine
-              white sand and wonderful turquoise sea. Our use of traditional
-              Sardinian pottery, stone and mosaic decorations and careful choice
-              of fresh fabrics and design objects contributes to the hotel’s
-              exclusive atmosphere.
-            </p>
-          </div>
-
-          <div class="col-xs-6 col-md-3">
-            <h6>Discover</h6>
-            <ul class="footer-links">
-              <li><a href="#">Travels</a></li>
-              <li>
-                <a href="#">Resturants</a>
-              </li>
-              <li>
-                <a href="#">Lobby</a>
-              </li>
-              <li>
-                <a href="#">Pool side</a>
-              </li>
-              <li>
-                <a href="#">Event Hall</a>
-              </li>
-              <li>
-                <a href="#">Dishes</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-xs-6 col-md-3">
-            <h6>Quick Links</h6>
-
-            <ul class="footer-links">
-              <li><a href="#">About Us</a></li>
-
-              <li><a href="#">Contact Us</a></li>
-              <li>
-                <a href="#">Contribute</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li><a href="#">Sitemap</a></li>
-            </ul>
-          </div>
-        </div>
-        <hr />
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">
-              Copyright &copy; 2020 All Rights Reserved by
-              <a href="#">Zurum Team Fierce</a>.
-            </p>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <ul class="social-icons">
-              <li>
-                <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li>
-                <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li>
-                <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
-              </li>
-              <li>
-                <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
+      </footer class="container-fluid">
+      
     </footer>
 
     <script
