--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
           aria-label="Button group with nested dropdown"
         >
           <button type="button" class="btn btn-light">
-            <span>Check in &#128197;</span>
+            <span class="date">Check in &#128197;</span>
           </button>
           <button type="button" class="btn btn-light">
-            <span>Check out &#128197;</span>
+            <span class="date">Check out &#128197;</span>
           </button>
 
           <div class="btn-group" role="group">
@@ -251,7 +251,9 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div><img src="images/Footer.png" alt="" /></div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
